# ghc98-bug

./: .gitignore  README  ghc98-bug.cabal
src/Barbies/: Internal.hs
src/GHC98/: AAAX.hs
